fixed header alignment

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -125,6 +125,7 @@ header .weather .weather-header .city {
   font-size: 30px;
   margin-bottom: 1rem;
   font-weight: 700;
+  text-align: center;
 }
 
 header .weather .weather-header .temp-icon {
@@ -155,6 +156,7 @@ header .weather .weather-header .summary {
   -webkit-transition: all 0.5s ease-in-out;
   transition: all 0.5s ease-in-out;
   height: 500px;
+  color: #fff;
   padding: .5rem 0;
 }
 
@@ -191,14 +193,17 @@ header .weather .weather-header .summary {
 
 .sub-header .sub-details {
   margin-top: 30px;
-  color: #fff;
 }
 
 .sub-header .sub-details .sub-forcast {
   text-align: center;
 }
 
-.sub-header .sub-icons {
+.sub-header .sub-details .display {
+  color: #fff;
+}
+
+.sub-header .sub-details .sub-icons {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -214,12 +219,12 @@ header .weather .weather-header .summary {
           align-items: center;
 }
 
-.sub-header .sub-icons .time {
+.sub-header .sub-details .sub-icons .time {
   padding: .5rem 0;
   color: #fff;
 }
 
-.sub-header .sub-icons .small-temp {
+.sub-header .sub-details .sub-icons .small-temp {
   color: #fff;
 }
 
